--- a/TicTacToe.ipynb
+++ b/TicTacToe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "0aa561d3",
    "metadata": {},
    "outputs": [
@@ -11,17 +11,17 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Spieler 1 ist O\n",
-      "Spieler 2 ist X\n",
+      "Spieler 1 ist X\n",
+      "Spieler 2 ist O\n",
       "\n",
       "\n",
       "Das aktuelle Bord\n",
       "\n",
-      " X | O | O \n",
+      " X | O | X \n",
       "---|---|---\n",
-      " O | O |   \n",
+      " O | X | O \n",
       "---|---|---\n",
-      " X | X | X \n",
+      " X | O |   \n",
       "\n",
       "Die Zahlen des Spielbretts\n",
       "\n",
@@ -41,18 +41,31 @@
     "clear_output()\n",
     "\n",
     "def neues_spiel():\n",
+    "    '''Erwartet vom Spieler die Eingabe O oder X.\n",
+    "    \n",
+    "    :return Ein Tupel welches den Spielern ihre Markierung zuweist.\n",
+    "    \n",
+    "    '''\n",
+    "    \n",
     "    frage = input('\\nWollen Sie TikTakToe spielen? j oder n.\\n\\n').upper()    \n",
     "    if frage == 'J':        \n",
     "        spieler = ''    \n",
     "        while spieler != 'X' and spieler != 'O':        \n",
     "            spieler = input('\\nSpieler 1: Willst Du X oder O sein?\\n\\n').upper()\n",
+    "        if spieler == 'X':\n",
+    "            return ('X', 'O')\n",
+    "        else:\n",
+    "            return ('O', 'X')\n",
     "    else:\n",
     "        os._exit(0)\n",
     "    clear_output()\n",
     "    return spieler\n",
     "        \n",
     "def ausgabe(reihe1, reihe2, reihe3):\n",
-    "    '''Ausgabe des Spielboards'''\n",
+    "    '''\n",
+    "    Angabe der Spielermarkierungen.\n",
+    "    Ausgabe des Spielboards und dee Feldnummern.\n",
+    "    '''\n",
     "    print(f'\\nSpieler 1 ist {spieler1}')\n",
     "    print(f'Spieler 2 ist {spieler2}\\n')\n",
     "    print('\\nDas aktuelle Bord\\n')\n",
@@ -121,12 +134,7 @@
     "spieler1 = ''\n",
     "spieler2 = ''\n",
     "    \n",
-    "spieler = neues_spiel()\n",
-    "\n",
-    "if spieler == 'X':\n",
-    "    spieler1, spieler2 = ('X', 'O')\n",
-    "else:\n",
-    "    spieler1, spieler2 = ('O', 'X')\n",
+    "spieler1, spieler2 = neues_spiel()\n",
     "    \n",
     "clear_output()\n",
     "ausgabe(reihe1, reihe2, reihe3)\n",
@@ -165,7 +173,7 @@
     "    else:\n",
     "        clear_output()\n",
     "        ausgabe(reihe1, reihe2, reihe3)\n",
-    "        print(f'\\nSpieler {gewinner} hat gewonnen')\n"
+    "        print(f'\\nSpieler {gewinner} hat gewonnen')"
    ]
   },
   {
